# sbackup

./: .gitignore  README.md  config.json  main.py  pyproject.toml  test_compression.py
.github/workflows/: release.yml
sbackup/: __init__.py  __main__.py  _compression.py  auto_save.py  compression.py  config.py  i18n.py  pack.py  sftp.py  webdav.py
sbackup/locales/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  ko_KR.json  pt_BR.json  ru_RU.json  zh_CN.json
tests/sbackup/: test_auto_save.py  test_compression.py  test_config.py  test_i18n.py  test_main.py  test_sftp.py  test_webdav.py
