[project]
name = "sbackup"
version = "1.0.0"
description = "智能文件夹备份工具，支持增量备份和自定义配置"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "xiatianxuan", email = "xiatianxuan2025@163.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "tqdm>=4.67.3",
]

[project.scripts]
sbackup = "sbackup:run"

[project.urls]
Homepage = "https://gitee.com/xiatianxuan"
Repository = "https://gitee.com/xiatianxuan/sbackup"
